# news

./: BUILD.bazel  MODULE.bazel  README.md
.github/: SECURITY.md
.github/workflows/: codeql.yaml  docker.yaml  python.yaml  rust.yaml
docker/: README.md  docker-compose.yml  squid.yml
docker/api/: Dockerfile
docker/ml/: Dockerfile
docker/web/: Dockerfile
front/: app.vue  nuxt.config.ts  package.json  pnpm-lock.yaml  tailwind.config.js
front/components/: Accordion.vue  Badge.vue  Banner.vue  Footer.vue  NavBar.vue
front/components/Card/: Summary.vue  TopNews.vue
front/layouts/: default.vue
front/locales/: en-US.json  fr-FR.json
front/pages/: index.vue  mcq.vue  summary.vue
front/public/: manifest.json  sw.js
graphql/: Cargo.toml
graphql/api/: Cargo.toml
graphql/api/src/: main.rs  media.rs  news.rs
graphql/api/src/helpers/: handler.rs  mod.rs  ranking.rs  summary.rs
graphql/api/src/media/: fr.rs  mod.rs  us.rs
graphql/api/src/models/: image.rs  mcq.rs  mod.rs  news.rs  source.rs
graphql/api/src/schema/: mcq.rs  mod.rs  news.rs
graphql/api/src/services/: handler.rs  ranking.rs  summary.rs
graphql/crawler/: Cargo.toml
graphql/crawler/src/: cache.rs  lib.rs  scraper.rs
graphql/error/: Cargo.toml
graphql/error/src/: lib.rs
graphql/rank/: Cargo.toml
graphql/rank/proto/: squid.proto
graphql/rank/src/: lib.rs  squid.rs  twitter.rs
graphql/search/: Cargo.toml
graphql/search/src/: lib.rs  ttl.rs
machine_learning/: pyproject.toml  requirements.txt  setup.py
machine_learning/models/: summary.py
machine_learning/rest/: main.py
machine_learning/rest/app/: main.py
machine_learning/rest/app/ml/: summary.py
machine_learning/rest/test/: test.py
qa/: model.py
