[workspace]
resolver = "2"
members = [
    "api",
    "crawler",
    "error",
    "rank",
    "search",
]

[workspace.package]
version = "1.0.0"
description = "news aggregator"
homepage = "https://news.gravitalia.com"
readme = "README.md"
edition = "2021"
license = "MPL"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false

[profile.dev]
opt-level = "z"
debug = true
