[workspace]
resolver = "2"
members = [
    "api",
    "crawler",
    "error",
    "rank",
    "search",
]

[workspace.package]
version = "2.0.0"
description = "news aggregator"
homepage = "https://news.gravitalia.com"
readme = "README.md"
edition = "2024"
license = "MPL"

[workspace.dependencies]
tokio = { version = "1.47", features = ["macros", "rt-multi-thread"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false
