[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3"
juniper = "0.16"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread"] }
juniper_warp = "0.8"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
crawler = { path = "../crawler" }
search = { path = "../search" }
strum = "0.26"
strum_macros = "0.26"
url = "2.*"
r2d2-memcache = "0.6"
