[package]
name = "rank"
version = "0.1.0"
description = "keeping abreast of the latest trends"
homepage.workspace = true
readme.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tonic = "0.12.1"
prost = "0.13"
reqwest = "0.12"
lazy_static = "1.5"

[build-dependencies]
tonic-build = { version = "0.12.1", features = ["prost"] }